[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbom-security-mcp"
version = "0.1.0"
description = "SBOM security analysis MCP for security operators."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.27,<2",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

